# mipt_project

./: CMakeLists.txt  README.md  colordelegate.cpp  colordelegate.h  comboboxdelegate.cpp  comboboxdelegate.h  data.csv  data.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
logic/: blocks.cpp  blocks.h  instrument.cpp  instrument.h  io.cpp  io.h  io_csv.cpp  io_json.cpp  manager.cpp  manager.h  odf.cpp  odf.h  readers.cpp  readers.h  utils.hpp  variable_data.cpp  variable_data.h
models/: datamodel.cpp  datamodel.h  instrumentmodel.cpp  instrumentmodel.h  measurement_model.cpp  measurement_model.h  measurementmodel.cpp  measurementmodel.h  namingmodel.cpp  namingmodel.h  visualmodel.cpp  visualmodel.h
parser/: FormulaParser.cpp  FormulaParser.h  FormulaParser.hpp  Node.h  Node.hpp  constants.csv  operands.h  operands.hpp  plugin_api.h  plugin_api.hpp  plugin_arithmetic_average  plugin_arithmetic_average.cpp  plugin_max.cpp  plugin_min.cpp  plugin_sum  plugin_sum.cpp  plugin_sum.func  utils.hpp
plots/: plot.h  plotchoice.cpp  plotchoice.h  plothist.cpp  plothist.h  plotscatter.cpp  plotscatter.h  plotscatter2d.cpp  plotscatter2d.h
